em/skin/theme_resources/stylesheets/foundation.css
/* ... */
div.formControls input[type="submit"]:active {
  color: #000;
  border: 1px solid #444;
  -moz-box-shadow: none;
  -ms-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  text-shadow: none;
  color: #efeff1;
  background: #555;
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #555), color-stop(100%, #777));
  background: -webkit-linear-gradient(#555, #777);
  background: -ms-linear-gradient(#555, #777);
  background: -moz-linear-gradient(#555, #777);
  background: -o-linear-gradient(#555, #777);
  background: linear-gradient(#555, #777);
}

/* ----------------------------------------- Misc Rules
----------------------------------------- */

#portal-advanced-search, #portal-searchbox label, 
div.searchSection, input.searchButton {
    display: none;
}

#edit-bar {
    min-height: 30px !important;
    border-top: 3px solid #75AD0A !important;
}

#mid-container h1 {
    font-size: 26px;
}

div#LSResult {
    z-index:1000;
    margin-top: -25px;
    margin-right: 8px;
    background-color: transparent !important;
}

div.LSShadow fieldset{
    background-color: white;
}

div.unisubs-videoTab a span.unisubs-tabTextShare { display: none !important; }

ul#dl-links {
    left: 414px !important;
    width: 110px !important;
}

div#share-box {
    width: 330px !important;
    height: 60px !important;
}

div.LSBox {
    margin-top: -10px;
}

div.listingBarBottom {
    clear: both;
    padding-top: 35px;
}

#video-listings div.video, #latestvideos div.video {
    height: 177px;
}

#fieldset-openid-login .formControls input, #login-form .formControls input {
  margin-left: -40px !important;
  position: relative;
  left: 50%;
  font-size: 16px;
  padding: 5px 14px;
}

#login-form div.field {
  margin-right: 14%;
}

#login-form div.field input {
  padding: 0.5em;
  background: #f8f8fa;
  font-size: 16px;
  border: 1px solid #bbb;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
}

#user-menu a#personaltools-login {
  padding-right: 10px;
  border-right: 1px solid #CCCCCC ;
}

#user-menu a#personaltools-join {
  padding-left: 10px;
}

a.user {
  cursor: pointer;
}

#statistics {
  display: inline;
}

#mep_0 {
  overflow: hidden;
}

.main-title {
  height: 113px;
  margin-left: -8px;
  width: 460px;
}

#latest-videos-title a {
    color: #EFEFF1;
}

.tileItem p.tileFooter {
    display:none;
}

#user-menu .user {
    background: url("images/user-down.png") no-repeat scroll right center transparent;
    padding-right: 30px;
}

div.unisubs-videoTab-anchoring {
   width: 200px !important;
}

a#form-help {
  position: relative;
  left: 50%;
  z-index: 1000;
  top: 122px;
  margin-left: 410px;
  font-weight: bold;
  padding: 4px 10px;
  background: #2297ee;
  color: #fff;
  font-wize: 18px;
  -moz-border-radius: 11px;
  -webkit-border-radius: 11px;
  border-radius: 11px;
}

div#categorize-text-container {
    bottom: 290px;
    left: 200px;
    position: relative;
    width: 500px;
}

.author-details {
    padding-bottom: 20px;
}

body.template-featured_videos_homepage ul#dl-links {
    left: 324px !important;
    width: 201px !important;
}

/* Front page featured */

.sidebar-section .featured-filmmaker {
  margin-bottom: 0px;
}

.sidebar-section .featured-filmmaker div.under {
  background: #efeff1;
  border: none;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
}

.sidebar-section .featured-filmmaker div.proxy-under {
  height: 48px;
}

.sidebar-section .featured-filmmaker div.under a {
    color: #333;
    text-shadow: none;
}

.sidebar-section .featured-filmmaker .rollover {
    width: 100%;
}

.video .wrapper-under {
  width: 215px;
}

.featured-filmmaker .wrapper-under {
  width: 226px;
}

#calroot {
  width: 207px !important;
}

#caldays {
  height: 22px !important;
}

.icons-on .contenttype-document {
background: none;
}

div#video-listings .video span.duration {
   right: 25px;
}

.card {
    border-color: #FFF;
    border-style: solid;
    border-width: 1px;
    float: left;
    margin: 1em;
    padding: 1em 0;
    text-align: center;
    width: 110px;
}

@media only screen and (max-width: 985px) {
   #upper-container div.row.header { background:none repeat scroll 0 0 #C9CCD1; }
   #upper-container div.header {width: 100%;}
   #portal-searchbox { display:none;}
   #browse-menu, #publish-menu {margin-top: -8px; margin-left:9px; margin-right:0px;}
   div.row.header div.search { display: none; float: none; clear: both; }
   div.row.header, div.twelve.columns.header { height: 130px; }
   div.top-menu .header-menu-item { float: left; }
   div.row.header a.main-title p {left:0; }
   div.download { display: none; }
   div.unisubs-videoTab { display:none !important; }
   div.video div.rollover, div.video div.rollover p { max-width: 215px; }
   #video-listings div.video, #latestvideos div.video { max-width: 231px; }
   body.template-featured_videos_homepage #mid-container #featuredvideo .description { 
       clear: both; 
       position: inherit;
       float: none;
       width: 525px;
       height: auto;
       padding-bottom: 10px;
   }
}

